--- a/acercade.html
+++ b/acercade.html
@@ -16,14 +16,15 @@
 <body>
     <header >
         <nav>
-            <br>
+            
             <a href="index.html">Home</a>
             <a href="acercade.html">Acerca de</a>
             <a href="contacto.html">Contacto</a>
             <a href="registrarse.html">Registrarse</a>
             <a href="sucursales.html">Sucursales</a>
-            <h1><b><u><center>Recetas de cocina</center></u></b></h1>
         </nav>
+        <h1><b><u><center>Recetas de cocina</center></u></b></h1>
+
     </header>
     <main>
         <br>
@@ -31,21 +32,15 @@
         <h2>Acerca de mi</h2>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita animi qui velit minima incidunt eveniet veniam dolor voluptatem cupiditate et quas quia, illum, aperiam at. Suscipit quia maxime voluptate tempora!
         Nobis temporibus atque totam veritatis, error esse rem omnis, molestiae nemo necessitatibus inventore enim. Rerum cumque exercitationem vel maxime enim sed non quae suscipit delectus, veritatis quo, porro dolores praesentium?
-        <footer>
-            <br>
-            <section style="text-align: center;">
-                <a href="https://www.instagram.com/agos_guevara/">
-                    <i class='bx bxl-instagram'></i>
-                </a>
-                <a href="https://www.facebook.com/agui.guevara.9/">
-                    <i class='bx bxl-facebook-circle' ></i>
-                </a>
-                <a href="https://www.linkedin.com/in/agostina-guevara/">
-                    <i class='bx bxl-linkedin-square' ></i>
-                </a>
-            </section>
-            <p>Derechos reservados @2024</p>
-        </footer>
+        
     </main>
+    <footer>
+        <section class="redes">
+          <a href="https://www.instagram.com/agos_guevara/"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/agui.guevara.9/"><i class="bx bxl-facebook-circle"></i></a>
+          <a href="https://www.linkedin.com/in/agostina-guevara/"><i class="bx bxl-linkedin-square"></i></a>
+        </section>
+        <p>Derechos reservados @2024</p>
+      </footer>
 </body>
 </html>
