--- a/contacto.html
+++ b/contacto.html
@@ -15,36 +15,30 @@
 <body>
     <header >
         <nav>
-            <br>
+        
             <a href="index.html">Home</a>
             <a href="acercade.html">Acerca de</a>
             <a href="contacto.html">Contacto</a>
             <a href="registrarse.html">Registrarse</a>
             <a href="sucursales.html">Sucursales</a>
-            <h1><b><u><center>Recetas de cocina</center></u></b></h1>
-
         </nav>
+        <h1><b><u><center>Recetas de cocina</center></u></b></h1>
+
     </header>
     <main>
         <br>
         <br>
         <h2>Contacto</h2>
         <p>Enviame tus sugerencias de recetas a mi correo: <a href="mailto:agostina.guevara@outlook.com">agostina.guevara@outlook.com</a></p>
-        <footer >
-            <br>
-            <section style="text-align: center;">
-                <a href="https://www.instagram.com/agos_guevara/">
-                    <i class='bx bxl-instagram'></i>
-                </a>
-                <a href="https://www.facebook.com/agui.guevara.9/">
-                    <i class='bx bxl-facebook-circle' ></i>
-                </a>
-                <a href="https://www.linkedin.com/in/agostina-guevara/">
-                    <i class='bx bxl-linkedin-square' ></i>
-                </a>
-            </section>
-            <p>Derechos reservados @2024</p>
-        </footer>
+        
     </main>
+    <footer>
+        <section class="redes">
+          <a href="https://www.instagram.com/agos_guevara/"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/agui.guevara.9/"><i class="bx bxl-facebook-circle"></i></a>
+          <a href="https://www.linkedin.com/in/agostina-guevara/"><i class="bx bxl-linkedin-square"></i></a>
+        </section>
+        <p>Derechos reservados @2024</p>
+      </footer>
 </body>
 </html>
