--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <body>
     <!--Menu de navegacion-->
     <header>
-        <nav>
-            <br>
+        <nav >
             <a href="index.html">Home</a>
             <a href="acercade.html">Acerca de</a>
             <a href="contacto.html">Contacto</a>
             <a href="registrarse.html">Registrarse</a>
             <a href="sucursales.html">Sucursales</a>
-            <h1><b><u><center>Recetas de cocina</center></u></b></h1>
         </nav>
+        <h1><b><u><center>Recetas de cocina</center></u></b></h1>
+
     </header >
     <main>
     <section>
@@ -37,21 +37,14 @@
         <li>Cuando esté retirar del fuego y dejar tapado por 10 minutos más y servir o utilizar en una receta. Que lo disfruten!</li>
     </ol>
     </section>
-    <footer >
-        <section style="text-align: center;color: black;">
-            <a href="https://www.instagram.com/agos_guevara/">
-                <i class='bx bxl-instagram'></i>
-            </a>
-            <a href="https://www.facebook.com/agui.guevara.9/">
-                <i class='bx bxl-facebook-circle' ></i>
-            </a>
-            <a href="https://www.linkedin.com/in/agostina-guevara/">
-                <i class='bx bxl-linkedin-square' ></i>
-            </a>
-        </section>
-
-       <p >Derechos reservados @2024</p>
-    </footer>
     </main>
+    <footer>
+        <section class="redes">
+          <a href="https://www.instagram.com/agos_guevara/"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/agui.guevara.9/"><i class="bx bxl-facebook-circle"></i></a>
+          <a href="https://www.linkedin.com/in/agostina-guevara/"><i class="bx bxl-linkedin-square"></i></a>
+        </section>
+        <p>Derechos reservados @2024</p>
+      </footer>
 </body>
 </html>
