--- a/sucursales.html
+++ b/sucursales.html
@@ -15,15 +15,16 @@
 <body>
     <header >
         <nav>
-            <br>
+            
             <a href="index.html">Home</a>
             <a href="acercade.html">Acerca de</a>
             <a href="contacto.html">Contacto</a>
             <a href="registrarse.html">Registrarse</a>
             <a href="sucursales.html">Sucursales</a>
-            <h1><b><u><center>Recetas de cocina</center></u></b></h1>
 
         </nav>
+        <h1><b><u><center>Recetas de cocina</center></u></b></h1>
+
     </header>
     <main>
         <br>
@@ -37,21 +38,14 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.6110448212667!2d-58.679642799999996!3d-34.6897649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc0ee2f066705%3A0xd3214aafd9588c56!2sHelvecia%20701%2C%20B1716NDO%20Libertad%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1711201430163!5m2!1ses-419!2sar" width="300" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.0418747632384!2d-58.7187011!3d-34.6788926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc00b8a9f0e25%3A0x99f719ef6c68a348!2sMario%20Bravo%20474%2C%20B1722DXJ%20Merlo%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1711201469897!5m2!1ses-419!2sar" width="300" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         
-        <footer>
-            <br>
-            <section style="text-align: center;">
-                <a href="https://www.instagram.com/agos_guevara/">
-                    <i class='bx bxl-instagram'></i>
-                </a>
-                <a href="https://www.facebook.com/agui.guevara.9/">
-                    <i class='bx bxl-facebook-circle' ></i>
-                </a>
-                <a href="https://www.linkedin.com/in/agostina-guevara/">
-                    <i class='bx bxl-linkedin-square' ></i>
-                </a>
-            </section>
-            <p >Derechos reservados @2024</p>
-        </footer>
     </main>
+    <footer>
+        <section class="redes">
+          <a href="https://www.instagram.com/agos_guevara/"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/agui.guevara.9/"><i class="bx bxl-facebook-circle"></i></a>
+          <a href="https://www.linkedin.com/in/agostina-guevara/"><i class="bx bxl-linkedin-square"></i></a>
+        </section>
+        <p>Derechos reservados @2024</p>
+      </footer>
 </body>
 </html>
